# SensorCH32F103

./: .gitignore  .project  .template  CH32V003F4U.launch  CMakeLists.txt  CMakePresets.json  Project description  toolchain-ch32v003.cmake  toolchain-ch32v00x.cmake
.github/agents/: Conductor.agent.md  code-reviewer.agent.md  implement-subagent.agent.md  planning-subagent.agent.md
.mrs/: 3ee750168973f07089bc74bab2a9df07-.snapshot  CH32V003F4U.mrs-workspace  launch.json
App/: Measure.c  Measure.h  Modbus.c  Modbus.h  PWM.c  PWM.h  RS485.c  RS485.h  boardPins.h
User/: ch32v00x_it.c  main.c
agents/: Conductor.agent.md  code-reviewer.agent.md  implement-subagent.agent.md
plans/: rs485-dma-driver-plan.md
src/: main.c
wch/hal_libraries/bmsis/include/: debug.h
